--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py37, py38, flake8
 
 [travis]
 python =
     3.8: py38
     3.7: py37
-    3.6: py36
 
 [testenv:flake8]
 basepython = python
@@ -23,4 +22,3 @@ deps =
 commands =
     pip install -U pip
     pytest --basetemp={envtmpdir}
-
