ignore flake8 long lines warnings

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,9 @@ basepython = python
 deps = flake8
 commands = flake8 blebox_uniapi tests
 
+[flake8]
+ignore = E501
+
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
