--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,7 @@ test = pytest
 
 [tool:pytest]
 collect_ignore = ['setup.py']
+
+[mypy]
+exclude = (?x)(^tests/ | ^docs/ | ^setup.py$)
+disallow_untyped_defs = True
