--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ exclude = docs
 test = pytest
 
 [tool:pytest]
-collect_ignore = ['setup.py']
+asyncio_mode = auto
 
 [mypy]
 exclude = (?x)(^tests/ | ^docs/ | ^setup.py$)
