--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -17,7 +17,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      matrix:        
+      matrix:
         python-version: ["3.9", "3.10"]
 
     steps:
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+        if [ -f requirements_tests.txt ]; then pip install -r requirements_tests.txt; fi
     - name: Test with pytest
       run: |
         pytest
