--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -21,10 +21,10 @@ jobs:
     - uses: actions/checkout@v4
     - uses: chartboost/ruff-action@v1
       with:
-        mode: 'check'
+        args: 'check'
     - uses: chartboost/ruff-action@v1
       with:
-        mode: 'format'
+        args: 'format'
     - name: Set up Python ${{matrix.python-version}}
       uses: actions/setup-python@v3
       with:
