--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -14,7 +11,6 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,6 +18,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - uses: chartboost/ruff-action@v1
+      with:
+        args: 'check'
+    - uses: chartboost/ruff-action@v1
+      with:
+        args: 'format'
     - name: Set up Python ${{matrix.python-version}}
       uses: actions/setup-python@v3
       with:
